--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ body {
   display: flex;
   align-items: center;
   height: 100%;
-  margin: 0; padding: 2em;
+  margin: 0; padding: 2rem;
   justify-content: center;
 }
 /*------------------------------------*\
@@ -25,23 +25,23 @@ body {
 \*------------------------------------*/
 .header {
   background: white;
-  border-radius: 1.25em;
+  border-radius: 1.25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: 38em;
-  padding: 2em;
+  max-width: 38rem;
+  padding: 2rem;
   > *:not(:first-child) {
-    margin-top: 1.5em;
+    margin-top: 1.5rem;
   }
   &__img {
     background: #333;
     border-radius: 50%;
-    width: 11em; height: 11em;
+    width: 11rem; height: 11rem;
   }
   &__title {
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: normal;
   }
 }
@@ -52,9 +52,9 @@ body {
   width: 100%;
   &__list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(5em, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
     grid-template-rows: auto;
-    grid-gap: 1em;
+    grid-gap: 1rem;
     counter-reset: item;
     list-style-type: none;
     margin: 0; padding: 0;
@@ -67,7 +67,7 @@ body {
     flex-direction: column;
     
     color: var(--dotColor);
-    font-size: .875em;
+    font-size: .875rem;
     text-align: center;
     position: relative;
     &::before {
@@ -80,9 +80,9 @@ body {
       color: white;
       content: counters(item, ".") " ";
       counter-increment: item;
-      margin-bottom: .75em;
+      margin-bottom: .75rem;
       position: relative;
-      width: 2em; height: 2em;
+      width: 2rem; height: 2rem;
       z-index: 1;
     }
 
@@ -92,8 +92,8 @@ body {
       content: '';
       display: block;
       height: 2px;
-      position: absolute; top: 1em; left: 50%;
-      width: calc(100% + 1em);
+      position: absolute; top: 1rem; left: 50%;
+      width: calc(100% + 1rem);
       z-index: 0;
     }
     &.current~li {
